synthetic_lover esp added

--- a/blogs/synthetic_lover.html
+++ b/blogs/synthetic_lover.html
@@ -42,7 +42,10 @@
 
         <p>Sexual interactions with artificial beings have been a topic of
           controversy for some time now, but what lies beneath the surface?
-          Researchers propose that people tend to respond to sexualized robots
+          <a
+            href="https://link.springer.com/chapter/10.1007/978-3-030-19734-6_1"
+            target="_blank">Researchers propose</a>
+          that people tend to respond to sexualized robots
           in almost the same way as they would respond to other humans. To
           better understand this phenomenon, we must delve into the world of
           psychology and technology.</p>
@@ -57,7 +60,7 @@
           equation theory, which proposes that humans tend to treat machines
           like computers and robots as if they were real people.</p>
 
-          <img class="gif" src="/src/blog_posts/blog2/cyberlover1.png"
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover1.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
         <p>This tendency can lead to a blurring of the lines between reality and
@@ -83,7 +86,7 @@
           cues may not need to be realistic, being possible to use more abstract
           cues.</p>
 
-          <img class="gif" src="/src/blog_posts/blog2/cyberlover2.png"
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover2.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
         <p>The "sexual interaction illusion model" starts out with the
@@ -116,11 +119,15 @@
           relations and motivate us to become better versions of ourselves. Only
           time will tell which direction humanity will take.</p>
 
-        <p><b><i>"Almost everyone wants somebody to love, but many people have no one. 
-          If this natural desire can be satisfied for everyone who is capable of 
-          loving, surely the world would be a much happier place. Many who would 
-          otherwise have become social misfits, social outcasts, or even worse 
-          will instead be better-balanced human beings."</i></b></p>
+        <p><b><i>"Almost everyone wants somebody to love, but many people have
+              no one.
+              If this natural desire can be satisfied for everyone who is
+              capable of
+              loving, surely the world would be a much happier place. Many who
+              would
+              otherwise have become social misfits, social outcasts, or even
+              worse
+              will instead be better-balanced human beings."</i></b></p>
 
       </div>
       <div class="division-space-only"></div>
