--- a/es/blogs/synthetic_lover.html
+++ b/es/blogs/synthetic_lover.html
@@ -26,38 +26,44 @@
       <div id="navbar-placeholder"></div>
 
       <div id="content-blog">
-        <h1 class="massiveHeading">The Synthetic Lover: A New Era in Sexual
-          Exploration</h1>
+        <h1 class="massiveHeading">Amantes Sintéticos: Una Nueva era en la
+          Exploración Sexual</h1>
         <p class="categories">
           <span class="category">AI</span>
         </p>
 
-        <h2 class="subtitle">As the lines between fantasy and reality continue
-          to blur, a new generation of artificial sexual companions is emerging.
-          But what does this mean for our relationships, our desires, and our
-          very understanding of what it means to be human?</h2>
+        <h2 class="subtitle">A medida que la línea entre la ficción y la
+          realidad se hacen borrosas, una nueva generación
+          de acompañantes sexuales artificiales emerge.
+          Cuáles son los impactos de esto en nuestras
+          relaciones, deseos, y nuestro entendimiento de
+          que significa ser humano?</h2>
 
         <img class="gif" src="/src/blog_posts/blog2/cyberlover3.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
         <p>Las interacciones sexuales con seres artificiales han sido un tema
-          controvertido durante algún tiempo, pero ¿qué hay debajo de la
-          superficie? Los investigadores proponen que las personas tienden a
-          responder a los robots sexualizados casi de la misma manera que
+          controvertido durante algún tiempo, pero ¿Qué hay más allá de lo
+          aparente? <a
+            href="https://link.springer.com/chapter/10.1007/978-3-030-19734-6_1"
+            target="_blank">Investigadores proponen</a>
+          que las personas tienden a
+          responder a los acompañantes artificiales casi de la misma manera que
           responderían a otros humanos. Para entender mejor este fenómeno,
           debemos adentrarnos en el mundo de la psicología y la tecnología.</p>
 
         <p>Una teoría que intenta capturar todos los factores relevantes que
           contribuyen o reducen la ilusión de las interacciones sexuales reales
-          con socios basados en tecnología es la
+          con amantes basados en tecnología es la
           "ilusión de interacción sexual". Según esta teoría, los usuarios
           podrían responder automáticamente a las interacciones sexuales
           artificiales como lo harían con sus contrapartes de la vida real, a
           pesar de saber conscientemente que solo están interactuando con
-          tecnología. Este fenómeno puede explicarse por la teoría de la
+          algo artificial. Este fenómeno puede explicarse por la teoría de la
           ecuación de los medios, que propone que los humanos tienden a tratar a
           las máquinas, como computadoras y robots, como si fueran personas
-          reales.</p>
+          reales, asignándole categorias sociales basados en los estereotipos
+          que las máquinas evocan en la persona.</p>
 
         <img class="gif" src="/src/blog_posts/blog2/cyberlover1.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
@@ -65,9 +71,16 @@
         <p>Esta tendencia puede llevar a una difuminación de las líneas entre la
           realidad y la fantasía, lo cual es particularmente relevante en el
           contexto de las interacciones sexuales con acompañantes artificiales.
-          La "suspensión voluntaria de la incredulidad" nos permite sumergirnos
+          La "suspensión voluntaria de la incredulidad" es un concepto que
+          aracteriza
+          la voluntad de las personas para aceptar y mantener la ilusión de
+          estar
+          interactuando con alguien real en vez de un ser artificial (inclusive
+          si se sabe lo contrario por medio de la razón), esto nos permite
+          sumergirnos
           completamente en un mundo o escenario ficticio, y en este caso, puede
-          conducir a una experiencia emocional intensa para el usuario.</p>
+          conducir al usuario a una experiencia física y emocional más
+          intensa.</p>
 
         <p>Sin embargo, también hay riesgos potenciales asociados con el uso de
           compañeros artificiales para fines sexuales. Estos incluyen la
@@ -79,55 +92,60 @@
           normas, pueden haber conflictos para crear y mantener la suspensión de
           la incredulidad.</p>
 
-        <p>The necessary cues for that can be represented as verbal and
-          nonverbal signs where the response is likely to follow if the decisive
-          cues are presented. However, to what extent? If we consider the world
-          of pornographic mangas and hentai, it's possible to say that these
-          cues may not need to be realistic, being possible to use more abstract
-          cues.</p>
+        <p>Las señales para este proceso pueden ser tanto verbales como no
+          verbales,
+          donde la respuesta del usuario es recíproca si las señales adecuadas
+          estan presentes.
+          Sin embargo, Hasta que punto es así?Si consideramos el mundo de la
+          pronografía dibujada
+          como el manda, o el hentai, es posible decir que las señales no tienen
+          por que siquiera
+          ser realistas, dando paso al uso de representaciones más
+          abstractas.</p>
 
         <img class="gif" src="/src/blog_posts/blog2/cyberlover2.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
-        <p>The "sexual interaction illusion model" starts out with the
-          assumption that users' perception of sexual explicitness triggers
-          sexual arousal. This idea can lead us to conclude that artificial
-          partners can achieve an easier or better goodness-of-fit if they are
-          able to adjust their interactions (verbal and nonverbal) to match the
-          user's sexual preferences.</p>
+        <p>El modelo de "ilusión de interacción sexual" tiene como base la idea
+          de que la percepción de elementos sexuales por parte de los usuarios
+          genera exitación sexual. Esta idea nos puede llevar a la coclusió de
+          que los acompañantes artificiales pueden lograr mejor y/o más
+          facilmente un ajuste entre sus señales verbales y no verbales con
+          las preferencias del usario.</p>
 
-        <p>Despite all the possible benefits, there are always risks or issues
-          with this kind of use of technology. If we consider that humans see
-          and interact with the world through our own and personal understanding
-          of it, we will engage in ways that represent our strengths and
-          weaknesses. So, it is understandable that there would be concern about
-          the use of artificial beings to fulfill immoral and dangerous sexual
-          practices.</p>
+        <p>A pesar de todos los posibles beneficios, siempre hay riesgos y
+          problemas
+          asociados a este tipo de uso de la tecnología. Si consideramos que, en
+          nuestra condición humana, vemos el mundo no como es, sino como somos,
+          siempre el humano, en su actuar en el mundo, reflejará tanto sus
+          fortalezas
+          como su debilidades. Por lo que es entendible que siempre hayan grupos
+          que se opongan al uso de seres artificiales para placer sexual, dado
+          que
+          siempre existirán personal que realicen prácticas peligrosas e
+          inmorales.</p>
 
-        <h3>Conclusion</h3>
+        <h3>Conclución</h3>
 
-        <p>However, this starts with the user themselves. We assign social
-          categories and personal stereotypes to machines and act accordingly.
-          The root of the issue is always human. On the other hand, these
-          interactions can also liberate us from social norms and judgment.
-          These blog posts center on sexual interactions but the same mechanisms
-          apply to other kinds of needs. If the machines are designed properly,
-          they can foster human development that helps us explore our desires,
-          what we would like to be or achieve, a romantic artificial partner can
-          isolate us and make us emotionally dependent on it for profit's sake,
-          or it can teach us in endless scenarios how to have healthy and happy
-          relations and motivate us to become better versions of ourselves. Only
-          time will tell which direction humanity will take.</p>
+        <p>Sin embargo, estos comportamientos comienzan con el propio usuario.
+          Asignamos categorías
+          sociales y estereotipos personales a las máquinas y actuamos en
+          consecuencia. La raíz del problema siempre es humana. Por otro lado,
+          estas interacciones también pueden liberarnos de las normas y juicios
+          sociales, permitiendo una exploración segura y libre. Este blog se
+          centran en las
+          interacciones sexuales, pero los mismos mecanismos se aplican a otros
+          tipos de necesidades. Si las máquinas están diseñadas adecuadamente,
+          pueden fomentar el desarrollo human, ayudandonos a explorar nuestros
+          deseos, lo que nos gustaría ser o lograr; un acompañante artificial
+          romántico puede aislarnos y hacernos emocionalmente dependientes de
+          este
+          por motivos de lucro, o puede enseñarnos en infinitos escenarios cómo
+          tener relaciones saludables y felices, motivándoos a convertirnos en
+          mejores versiones de nosotros mismos. Solo el tiempo dirá qué
+          dirección tomará la humanidad.</p>
 
-        <p><b><i>"Almost everyone wants somebody to love, but many people have
-              no one.
-              If this natural desire can be satisfied for everyone who is
-              capable of
-              loving, surely the world would be a much happier place. Many who
-              would
-              otherwise have become social misfits, social outcasts, or even
-              worse
-              will instead be better-balanced human beings."</i></b></p>
+        <p><b><i>"Casi todos quieren a alguien a quien amar, pero muchas personas no tienen a nadie. Si este deseo natural puede satisfacerse para todos los que son capaces de hacerlo, seguramente el mundo sería un lugar mucho más feliz. Muchos que de otro modo se habrían convertido en inadaptados sociales, marginados, o incluso algo peor, serán en cambio seres humanos más balanceados."</i></b></p>
 
       </div>
       <div class="division-space-only"></div>
