--- a/src/blog_posts/blogs_es.html
+++ b/src/blog_posts/blogs_es.html
@@ -33,7 +33,7 @@
             <article class="project">
 
                 <!-- Blog 2 -->
-                <!-- <div class="card blog2"
+                <div class="card blog2"
                     onclick="window.location.href = '/es/blogs/synthetic_lover.html'">
                     <div class="project-info">
                         <div class="project-bio">
@@ -47,7 +47,7 @@
                                 que significa ser humano?</p>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- Blog 1 -->
                 <div class="card blog1"
