Blog content meta fixed

--- a/blogs/hybrid_prompts.html
+++ b/blogs/hybrid_prompts.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Hybrid prompts combine the latent space of LLM's with the latent solution space in archaeology to create more realistic and immersive virtual companions." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
