--- a/es/blogs/hybrid_prompts.html
+++ b/es/blogs/hybrid_prompts.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Los prompts híbridos combinan el espacio latente de los LLMs con la zona de soluciones latentes en arqueología para crear compañeros virtuales más realistas e inmersivos." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
