--- a/blogs/synthetic_lover.html
+++ b/blogs/synthetic_lover.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="As fantasy and reality blur, new artificial sexual companions are emerging, challenging our relationships, desires, and understanding of humanity." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
