--- a/es/blogs/synthetic_lover.html
+++ b/es/blogs/synthetic_lover.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Con la difuminación entre fantasía y realidad, emergen nuevos compañeros sexuales artificiales, desafiando nuestras relaciones y deseos." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
