content meta projects fixed

--- a/es/projects/3v3_charger_circuit.html
+++ b/es/projects/3v3_charger_circuit.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Este circuito carga una batería LiPo de 3.7V y actúa como fuente de alimentación de 3.3V si es necesario." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
