--- a/es/projects/aina.html
+++ b/es/projects/aina.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Explorando Interacciones Sociales con Aina: Mi Experiencia como Desarrollador de Robots Humanoides." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
