--- a/es/projects/iter.html
+++ b/es/projects/iter.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Iter, un robot altamente modular, intercambia módulos dedicados para diferentes tareas según sea necesario, comunicándose a través de una API basada en Python y controlado mediante una interfaz de realidad virtual para Oculus Quest 2, ambos utilizando la misma API." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
