--- a/es/projects/llm_pdf_qa.html
+++ b/es/projects/llm_pdf_qa.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="ste blog explora cómo los asistentes de investigación inteligentes usan IA para descubrir ideas valiosas en un mundo lleno de información pero limitado en tiempo." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
