--- a/es/projects/paper.html
+++ b/es/projects/paper.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Investigación académica de una biblioteca de Python para estrategias de navegación en robots móviles con Aprendizaje Profundo en Nvidia Isaac Sim." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
