--- a/projects/3v3_charger_circuit.html
+++ b/projects/3v3_charger_circuit.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="This circuit charges a 3.7V LiPo battery and serves as a 3.3V power supply if needed." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
