--- a/projects/iter.html
+++ b/projects/iter.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Iter, a highly modular robot, swaps dedicated modules for different tasks as needed, communicating via a Python-based API and controlled through a VR interface for Oculus Quest 2, both using the same API.y" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
