--- a/projects/llm_pdf_qa.html
+++ b/projects/llm_pdf_qa.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="This blog delves into how intelligent research assistants use AI to efficiently navigate vast knowledge bases, uncovering valuable insights and applications in our information-rich yet time-constrained world." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
