--- a/projects/paper.html
+++ b/projects/paper.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Researching a Python library to generate navigation strategies for various mobile robots using Deep Reinforcement Learning in Nvidia Isaac Sim." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
