--- a/projects/aina.html
+++ b/projects/aina.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Magical Enginering" />
     <meta
       name="description"
-      content="Personal website about robotics, deep learning and philosophy" />
+      content="Exploring Social Interactions with Aina: My Journey as an Open-Source Humanoid Robot Developer." />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
