minnor ortographic fixes

--- a/es/blogs/synthetic_lover.html
+++ b/es/blogs/synthetic_lover.html
@@ -72,7 +72,7 @@
           realidad y la fantasía, lo cual es particularmente relevante en el
           contexto de las interacciones sexuales con acompañantes artificiales.
           La "suspensión voluntaria de la incredulidad" es un concepto que
-          aracteriza
+          caracteriza
           la voluntad de las personas para aceptar y mantener la ilusión de
           estar
           interactuando con alguien real en vez de un ser artificial (inclusive
