--- a/es/index.html
+++ b/es/index.html
@@ -41,7 +41,7 @@
         <div class="content-text">
           <p>
             Usar mi conocimiento para crear lo que sea que esté en mi cabeza me
-            hace respirar, así que déjame usar esta bendición/maldición para
+            hace vivir, así que déjame usar esta bendición/maldición para
             ayudarte a encontrar soluciones prácticas a tus problemas!
           </p>
         </div>
