blog 3 es/en added

--- a/src/blog_posts/blogs.html
+++ b/src/blog_posts/blogs.html
@@ -30,7 +30,21 @@
             </div>
 
             <article class="project">
-                <!-- Blog 1 -->
+                <!-- Blog 3 -->
+                <div class="card blog3"
+                    onclick="window.location.href = '/blogs/desires_fears_artificial_intimacy.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Ethics and Technology: A Future of Desires and
+                                Fears in Artificial Intimacy</h3>
+                            <p>Can the Use of Artificial Intelligence and
+                                Robotics for Sexual Satisfaction Promote Immoral
+                                and Dehumanizing Behaviors?</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Blog 2 -->
                 <div class="card blog2"
                     onclick="window.location.href = '/blogs/synthetic_lover.html'">
                     <div class="project-info">
@@ -38,9 +52,12 @@
                             <h3>The Synthetic Lover: A New Era in Sexual
                                 Exploration</h3>
                             <p>As the lines between fantasy and reality continue
-                                to blur, a new generation of artificial sexual companions is emerging.
-                                But what does this mean for our relationships, our desires, and our
-                                very understanding of what it means to be human?</p>
+                                to blur, a new generation of artificial sexual
+                                companions is emerging.
+                                But what does this mean for our relationships,
+                                our desires, and our
+                                very understanding of what it means to be
+                                human?</p>
                         </div>
                     </div>
                 </div>
@@ -61,7 +78,6 @@
                         </div>
                     </div>
                 </div>
-
 
             </article>
         </section>
