--- a/src/blog_posts/blogs_es.html
+++ b/src/blog_posts/blogs_es.html
@@ -32,6 +32,20 @@
 
             <article class="project">
 
+                <!-- Blog 3 -->
+                <div class="card blog3"
+                    onclick="window.location.href = '/es/blogs/desires_fears_artificial_intimacy.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Ética y Tecnología: Un Futuro de Deseos y Miedos
+                                en la Intimidad Artificial</h3>
+                            <p>Puede el uso de inteligencia artificial y
+                                robótica para la satisfacción sexual promover
+                                conductas inmorales y deshumanizadoras?</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Blog 2 -->
                 <div class="card blog2"
                     onclick="window.location.href = '/es/blogs/synthetic_lover.html'">
@@ -66,7 +80,6 @@
                         </div>
                     </div>
                 </div>
-
 
             </article>
         </section>
