--- a/src/modules/navbar.html
+++ b/src/modules/navbar.html
@@ -2,8 +2,8 @@
     <div class="container">
       <!-- Logo -->
       <h1 id="logo">
-        <a href="/index.html#"><img src="/src/assets/logo2.png"
-            alt="Your Logo" /></a>
+        <!-- <a href="/index.html#"><img src="/src/assets/logo2.png"
+            alt="Your Logo" /></a> -->
       </h1>
       <!-- Navbar links -->
       <ul class="nav-menu">
