--- a/src/modules/navbar_es.html
+++ b/src/modules/navbar_es.html
@@ -2,7 +2,7 @@
     <div class="container">
       <!-- Logo -->
       <h1 id="logo">
-        <a href="/es/index.html#"><img src="/src/assets/logo2.png"
+        <a href="/es/index.html#"><img src="/src/assets/logo.png"
             alt="Your Logo" /></a>
       </h1>
       <!-- Navbar links -->
