--- a/src/modules/navbar.html
+++ b/src/modules/navbar.html
@@ -1,9 +1,9 @@
 <nav class="navbar">
     <div class="container">
       <!-- Logo -->
-      <h1 id="logo">
-        <a href="/index.html#"></a>
-      </h1>
+      <a href="/index.html#" id="logo-link">
+        <div id="logo"></div>
+      </a>
       <!-- Navbar links -->
       <ul class="nav-menu">
         <li><a class="nav-link"
