fix href esp to redirect to esp version instead of eng one

--- a/src/modules/navbar_es.html
+++ b/src/modules/navbar_es.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="container">
       <!-- Logo -->
-      <a href="/index.html#" id="logo-link">
+      <a href="/es/index.html#" id="logo-link">
         <div id="logo"></div>
       </a>
       <!-- Navbar links -->
