--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -30,6 +30,24 @@
             </div>
 
             <article class="project">
+
+                <!-- Project 6 -->
+                <div class="card project6"
+                    onclick="window.location.href = '/projects/mini_vizca_400.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Mini Vizca 400: Digital Twin</h3>
+                            <p>Designing a python library to generate
+                                navigation
+                                strategies
+                                for different types of mobile robots with
+                                Deep
+                                Reinforcement
+                                Learning in Nvidia Isaac Sim.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 1 -->
                 <div class="card project1V2"
                     onclick="window.location.href = '/projects/paper.html'">
