--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -37,13 +37,7 @@
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Mini Vizca 400: Digital Twin</h3>
-                            <p>Designing a python library to generate
-                                navigation
-                                strategies
-                                for different types of mobile robots with
-                                Deep
-                                Reinforcement
-                                Learning in Nvidia Isaac Sim.</p>
+                            <p>Designing a digital twin of the robot Mini Vizca 400 of Maquintel Robotic Services in Nvidia Isaac Sim.</p>
                         </div>
                     </div>
                 </div>
