--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -30,6 +30,18 @@
             </div>
 
             <article class="project">
+
+                <!-- Proyecto 6 -->
+                <div class="card project6"
+                    onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Mini Vizca 400: Ráplica Digital</h3>
+                            <p>Diseñando una réplica digital del robot Mini Vizca 400 de Servicios Robóticos Maquintel en Nvidia Isaac Sim.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 1 -->
                 <div class="card project1V2"
                     onclick="window.location.href = '/es/projects/paper.html'">
