--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -31,6 +31,17 @@
 
             <article class="project">
 
+                <!-- Project 7 -->
+                <div class="card project7"
+                    onclick="window.location.href = '/projects/rovver_x_130.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Rovver X 130: Digital Twin</h3>
+                            <p>Designing a digital twin of the robot Rovver X 130 of Envirosight in Nvidia Isaac Sim.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 6 -->
                 <div class="card project6"
                     onclick="window.location.href = '/projects/mini_vizca_400.html'">
