--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -31,6 +31,17 @@
 
             <article class="project">
 
+                <!-- Proyecto 7 -->
+                <div class="card project7"
+                    onclick="window.location.href = '/es/projects/rovver_x_130.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Rovver X 130: Gemelo Digitall</h3>
+                            <p>Diseñando una réplica digital del robot Rovver X 130 de Envirosight en Nvidia Isaac Sim.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Proyecto 6 -->
                 <div class="card project6"
                     onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
