--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -36,7 +36,7 @@
                     onclick="window.location.href = '/es/projects/rovver_x_130.html'">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Rovver X 130: Gemelo Digitall</h3>
+                            <h3>Rovver X 130: Gemelo Digital</h3>
                             <p>Diseñando una réplica digital del robot Rovver X 130 de Envirosight en Nvidia Isaac Sim.</p>
                         </div>
                     </div>
