Fix subtitle blog 6 and 7 en and es
Changes to be committed:
	modified:   es/projects/mini_vizca_400.html
	modified:   es/projects/rovver_x_130.html
	modified:   projects/mini_vizca_400.html
	modified:   projects/rovver_x_130.html

--- a/es/projects/mini_vizca_400.html
+++ b/es/projects/mini_vizca_400.html
@@ -32,10 +32,7 @@
         </p>
 
         <h2 class="subtitle">
-          Una vez que intenté obtener un puesto de trabajo en 
-          <a href="https://www.maquintel.com/">Maquintel Robotic Services</a>,
-          pero no me contrataron, por lo que decí clonar su robot principal 
-          <a href="https://www.maquintel.com/tecnologia/mini-vizca-400-inspeccion-tuberias/">Mini Vizca 400</a>
+          Diseñando un gemelo digital del robot Mini Vizca 400 de <a href="https://www.maquintel.com/">Maquintel Robotic Services</a> en Nvidia Isaac Sim.
         </h2>
         
         <img class="gif" src="/src/project_posts/project6/vizca_moving_forward.gif"
