--- a/es/projects/rovver_x_130.html
+++ b/es/projects/rovver_x_130.html
@@ -32,9 +32,7 @@
         </p>
 
         <h2 class="subtitle">
-          Una empresa me contacto para hacer un robot de inspección de tuberías, pero dejaron repentinamente de hablarme, 
-          por lo que decí investigar la industria y clonar el robot más popular, el 
-          <a href="https://envirosight.com/products/rovver-x/">Rovver X 130</a>.
+          Diseñando una réplica digital del robot <a href="https://envirosight.com/products/rovver-x/">Rovver X 130</a> de Envirosight en Nvidia Isaac Sim.
         </h2>
         
         <img src="/src/project_posts/project7/intro_gif.gif"
