--- a/projects/mini_vizca_400.html
+++ b/projects/mini_vizca_400.html
@@ -32,10 +32,7 @@
         </p>
 
         <h2 class="subtitle">
-          Once I tried to get a job on 
-          <a href="https://www.maquintel.com/">Maquintel Robotic Services</a>,
-          but they didn't hired me, so I cloned their main robot 
-          <a href="https://www.maquintel.com/tecnologia/mini-vizca-400-inspeccion-tuberias/">Mini Vizca 400</a>
+          Designing a digital twin of the robot Mini Vizca 400 of <a href="https://www.maquintel.com/">Maquintel Robotic Services</a> in Nvidia Isaac Sim.
         </h2>
 
         <img class="gif" src="/src/project_posts/project6/vizca_moving_forward.gif"
