--- a/projects/rovver_x_130.html
+++ b/projects/rovver_x_130.html
@@ -32,9 +32,7 @@
         </p>
 
         <h2 class="subtitle">
-          A company contacted me to make a pipe inspection robot, but they suddenly stopped talking to me,
-          so I decided to investigate the industry and clone the most popular robot, the
-          <a href="https://envirosight.com/products/rovver-x/">Rovver X 130</a>.
+          Designing a digital twin of the robot <a href="https://envirosight.com/products/rovver-x/">Rovver X 130</a> of Envirosight in Nvidia Isaac Sim.
         </h2>
         
         <img src="/src/project_posts/project7/intro_gif.gif"
