Change index en es and email
Changes to be committed:
	modified:   es/index.html
	modified:   index.html
	modified:   src/js/cyclingText.js

--- a/es/index.html
+++ b/es/index.html
@@ -40,9 +40,7 @@
         <!-- Introductory text of myself-->
         <div class="content-text">
           <p>
-            Usar mi conocimiento para crear lo que sea que esté en mi cabeza me
-            hace vivir, así que déjame usar esta bendición/maldición para
-            ayudarte a encontrar soluciones prácticas a tus problemas!
+            Me gustan los robots y la inteligencia artificial! Suficiente sovre mí, echa un vistazo a mis proyectos y conectémonos si estás interesado en colaborar o simplemente quieres charlar!
           </p>
         </div>
         <a
