--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
         <!-- Introductory text of myself-->
         <div class="content-text">
           <p>
-            Using my knowledge to create whatever is in my head makes me live,
-            so let me use that blessing/curse to help you find insightful
-            solutions for your problems!
+            I'm love robotics and AI! Take a look at my projects and let's connect if you're interested in collaborating or just want to chat!
           </p>
         </div>
         <a
