Change cherrypicked projects en es
Changes to be committed:
	modified:   src/project_posts/projects_cherrypicked.html
	modified:   src/project_posts/projects_cherrypicked_es.html

--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -71,16 +71,13 @@
                     </div>
                 </div>
 
-                <!-- Project 4 -->
-                <div class="card project4"
-                    onclick="window.location.href = '/projects/3v3_charger_circuit.html'">
+                <!-- Project 6 -->
+                <div class="card project6"
+                    onclick="window.location.href = '/projects/mini_vizca_400.html'">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Make every 3v3 device rechargeable</h3>
-                            <p>This is a circuit that was design to charge a 3.7
-                                V lipo battery and, if is necessary, act as a
-                                power supply, in both cases the the output
-                                voltage is 3.3 V.</p>
+                            <h3>Mini Vizca 400: Digital Twin</h3>
+                            <p>Designing a digital twin of the robot Mini Vizca 400 of Maquintel Robotic Services in Nvidia Isaac Sim.</p>
                         </div>
                     </div>
                 </div>
