--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -67,17 +67,13 @@
                     </div>
                 </div>
 
-                <!-- Project 4 -->
-                <div class="card project4"
-                    onclick="window.location.href = '/es/projects/3v3_charger_circuit.html'">
+                <!-- Proyecto 6 -->
+                <div class="card project6"
+                    onclick="window.location.href = '/es/projects/mini_vizca_400.html'">
                     <div class="project-info">
                         <div class="project-bio">
-                            <h3>Hacer que todos los dispositivos 3v3 sean
-                                recargables</h3>
-                            <p>Este es un circuito diseñado para cargar una
-                                batería lipo de 3.7V y, si es necesario,
-                                actuar como una fuente de alimentación, en ambos
-                                casos la salida de voltaje es de 3.3V.</p>
+                            <h3>Mini Vizca 400: Gemelo Digital</h3>
+                            <p>Diseñando una réplica digital del robot Mini Vizca 400 de Servicios Robóticos Maquintel en Nvidia Isaac Sim.</p>
                         </div>
                     </div>
                 </div>
