--- a/es/index.html
+++ b/es/index.html
@@ -40,7 +40,7 @@
         <!-- Introductory text of myself-->
         <div class="content-text">
           <p>
-            Me gustan los robots y la inteligencia artificial! Suficiente sovre mí, echa un vistazo a mis proyectos y conectémonos si estás interesado en colaborar o simplemente quieres charlar!
+            Me gustan los robots y la inteligencia artificial! Suficiente sobre mí, echa un vistazo a mis proyectos y contáctame si estás interesado en colaborar o simplemente quieres charlar!
           </p>
         </div>
         <a
