Fix spelling index en
Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Introductory text of myself-->
         <div class="content-text">
           <p>
-            I'm love robotics and AI! Take a look at my projects and let's connect if you're interested in collaborating or just want to chat!
+            I love robotics and AI! Take a look at my projects and let's connect if you're interested in collaborating or just want to chat!
           </p>
         </div>
         <a
